--- a/UserInterface/Views/Shared/Main_Layout.cshtml
+++ b/UserInterface/Views/Shared/Main_Layout.cshtml
@@ -92,10 +92,10 @@
 
                                 <div id="navbar-collapse" class="collapse navbar-collapse">
                                     <ul class="nav navbar-nav mr-auto">
+                                        <li class="nav-item"><a class="nav-link" href="/Word/Index">Main Page</a></li>
                                         <li class="nav-item"><a class="nav-link" href="/Word/AddWord">Add New Word</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="/Favorite/Index">Favorites</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="/Unknows/Index">Unknows</a></li>
                                     </ul>
                                 </div>
                             </nav>
