--- a/UserInterface/Views/Word/Index.cshtml
+++ b/UserInterface/Views/Word/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@using Core.Dto
-@model List<WordDto>
+﻿@using Core.Entity
+@model List<Word>
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/Main_Layout.cshtml";
@@ -18,6 +18,7 @@
             <th>Add Favorites</th>
             <th>Add Unknows</th>
             <th>Delete</th>
+            <th>Update</th>
         </tr>
     </thead>
     <tbody>
@@ -27,13 +28,14 @@
                 <td>@item.Id</td>
                 <td>@item.EnglishWord</td>
                 <td>@item.TurkishWord</td>
-                <td><a href="#" class="btn btn-success">Favorites</a></td>
-                <td><a href="#" class="btn btn-success">Unknows</a></td>
+                <td><a href="/Favorite/AddFavorite/@item.Id" class="btn btn-success">Favorites</a></td>
+                <td><a href="/Unknows/AddUnknows/@item.Id" class="btn btn-success">Unknows</a></td>
                 <td>
                     <form action="/Word/DeleteWord/@item.Id" method="POST" id="deleteForm">
                         <a href="#" class="btn btn-warning" onclick="showConfirmation(event, @item.Id)">Delete</a>
                     </form>
                 </td>
+                <td><a href="/Word/UpdateWord/@item.Id" class="btn btn-outline-primary">Update</a></td>
             </tr>
         }
     </tbody>
