--- a/UserInterface/Views/Favorite/Index.cshtml
+++ b/UserInterface/Views/Favorite/Index.cshtml
@@ -1,8 +1,35 @@
-﻿
+﻿@using Core.Entity
+@model List<Favorite>
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/Main_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<h1>Favorite List</h1>
+
+<table class="table table-bordered">
+    <thead>
+        <tr>
+            <th>#</th>
+            <th>English</th>
+            <th>Turkish</th>
+            <th>#</th>
+            <th>Update</th>
+            <th>Delete</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach(var item in Model)
+        {
+            <tr>
+                <td>@item.Id</td>
+                <td>@item.EnglishWord</td>
+                <td>@item.TurkishWord</td>
+                <td>@item.WordId</td>
+                <td><a href="/Favorite/UpdateFavorite/@item.Id" class="btn btn-outline-danger">Update</a></td>
+                <td><a href="/Favorite/DeleteFavorite/@item.Id" class="btn btn-outline-primary">Delete</a></td>
+            </tr>
+        }
+    </tbody>
+</table>
 
