--- a/UserInterface/Views/Unknows/Index.cshtml
+++ b/UserInterface/Views/Unknows/Index.cshtml
@@ -1,8 +1,35 @@
-﻿
+﻿@using Core.Entity
+@model List<Unknows>
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/Main_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<h1>Unknows List</h1>
+<br />
+<table class="table table-bordered">
+    <thead>
+        <tr>
+            <th>#</th>
+            <th>English</th>
+            <th>Turkish</th>
+            <th>#</th>
+            <th>Update</th>
+            <th>Delete</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>@item.Id</td>
+                <td>@item.EnglishWord</td>
+                <td>@item.TurkishWord</td>
+                <td>@item.WordId</td>
+                <td><a href="/Unknows/UpdateUnknows/@item.Id" class="btn btn-outline-danger">Update</a></td>
+                <td><a href="/Unknows/DeleteUnknows/@item.Id" class="btn btn-outline-primary">Delete</a></td>
+            </tr>
+        }
+    </tbody>
+</table>
 
