--- a/UserInterface/Views/Shared/Main_Layout.cshtml
+++ b/UserInterface/Views/Shared/Main_Layout.cshtml
@@ -1,86 +1,69 @@
-﻿
-@{
+﻿@{
     Layout = null;
 }
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
-    <!-- Basic Page Needs
-    ================================================== -->
     <meta charset="utf-8">
     <title>Constra - Construction Html5 Template</title>
-
-    <!-- Mobile Specific Metas
-    ================================================== -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Construction Html5 Template">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
-    <meta name=author content="Themefisher">
-    <meta name=generator content="Themefisher Constra HTML Template v1.0">
-
-    <!-- Favicon
-    ================================================== -->
+    <meta name="author" content="Themefisher">
+    <meta name="generator" content="Themefisher Constra HTML Template v1.0">
     <link rel="icon" type="image/png" href="/main/theme/images/favicon.png">
-
-    <!-- CSS
-    ================================================== -->
+    <link href="/content/headanimation.css" rel="stylesheet" />
+    <link href="/content/pagedList.css" rel="stylesheet" />
     <link href="/content/textbox.css" rel="stylesheet" />
-    <!-- Bootstrap -->
     <link rel="stylesheet" href="/main/theme/plugins/bootstrap/bootstrap.min.css">
-    <!-- FontAwesome -->
     <link rel="stylesheet" href="/main/theme/plugins/fontawesome/css/all.min.css">
-    <!-- Animation -->
     <link rel="stylesheet" href="/main/theme/plugins/animate-css/animate.css">
-    <!-- slick Carousel -->
     <link rel="stylesheet" href="/main/theme/plugins/slick/slick.css">
     <link rel="stylesheet" href="/main/theme/plugins/slick/slick-theme.css">
-    <!-- Colorbox -->
     <link rel="stylesheet" href="/main/theme/plugins/colorbox/colorbox.css">
-    <!-- Template styles-->
     <link rel="stylesheet" href="/main/theme/css/style.css">
+    <style>
+        .dropdown-menu a:nth-child(1),
+        .dropdown-menu a:nth-child(2) {
+            font: bold;
+            color: red;
+        }
 
+        .dropdown-menu a:nth-child(3),
+        .dropdown-menu a:nth-child(4) {
+            font: bold;
+            color: green;
+        }
+
+        .dropdown-menu a:nth-child(5),
+        .dropdown-menu a:nth-child(6) {
+            font: bold;
+            color: blue;
+        }
+
+        .dropdown-menu {
+            text-align: center;
+        }
+
+            .dropdown-menu a {
+                display: block;
+                text-align: center;
+            }
+    </style>
 </head>
 <body>
     <div class="body-inner">
-
-        <!-- Header start -->
         <header id="header" class="header-one">
-            <div class="bg-white">
+            <div class="bg-white" style="background-image: url('/image/english4.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center;">
                 <div class="container">
                     <div class="logo-area">
                         <div class="row align-items-center">
-
-                            <div class="col-lg-9 header-right">
-                                <ul class="top-info-box">
-                                    <li>
-                                        <div class="info-box">
-                                            <div class="info-box-content">
-                                                <p class="info-box-title">Call Us</p>
-                                                <p class="info-box-subtitle">(+9) 847-291-4353</p>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="info-box">
-                                            <div class="info-box-content">
-                                                <p class="info-box-title">Email Us</p>
-                                                <p class="info-box-subtitle">office@Constra.com</p>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li class="header-get-a-quote">
-                                        <a class="btn btn-primary" href="contact.html">Get A Quote</a>
-                                    </li>
-                                </ul><!-- Ul end -->
-                            </div><!-- header right end -->
-                        </div><!-- logo area end -->
-
-                    </div><!-- Row end -->
-                </div><!-- Container end -->
+                            <!-- Logo area content -->
+                        </div>
+                    </div>
+                </div>
             </div>
-
             <div class="site-navigation">
                 <div class="container">
                     <div class="row">
@@ -89,107 +72,81 @@
                                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
                                     <span class="navbar-toggler-icon"></span>
                                 </button>
-
                                 <div id="navbar-collapse" class="collapse navbar-collapse">
                                     <ul class="nav navbar-nav mr-auto">
                                         <li class="nav-item"><a class="nav-link" href="/Word/Index">Main Page</a></li>
                                         <li class="nav-item"><a class="nav-link" href="/Word/AddWord">Add New Word</a></li>
                                         <li class="nav-item"><a class="nav-link" href="/Favorite/Index">Favorites</a></li>
                                         <li class="nav-item"><a class="nav-link" href="/Unknows/Index">Unknows</a></li>
+                                        <li>
+                                            <a class="btn btn-primary btn-sm" href="#" style="font-size:14px;">
+                                                <i class="fas fa-play"></i> Let's Practice
+                                            </a>
+                                        </li>
+                                        <li class="nav-item dropdown">
+                                            <a class="nav-link dropdown-toggle" href="#" id="practiceDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                <i class="fas fa-book"></i> Oxford Word List
+                                            </a>
+                                            <div class="dropdown-menu" aria-labelledby="practiceDropdown">
+                                                <a class="dropdown-item" href="#">A1 Words</a>
+                                                <a class="dropdown-item" href="#">A2 Words</a>
+                                                <a class="dropdown-item" href="#">B1 Words</a>
+                                                <a class="dropdown-item" href="#">B2 Words</a>
+                                                <a class="dropdown-item" href="#">C1 Words</a>
+                                                <a class="dropdown-item" href="#">C2 Words</a>
+                                            </div>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="/Unknows/Index">
+                                                <i class="fas fa-user"></i> Sign Up
+                                            </a>
+                                        </li>
                                     </ul>
                                 </div>
                             </nav>
                         </div>
-                        <!--/ Col end -->
                     </div>
-                    <!--/ Row end -->
-
-                    <div class="nav-search">
-                        <span id="search"><i class="fa fa-search"></i></span>
-                    </div><!-- Search end -->
-
-                    <div class="search-block" style="display: none;">
-                        <label for="search-field" class="w-100 mb-0">
-                            <input type="text" class="form-control" id="search-field" placeholder="Type what you want and enter">
-                        </label>
-                        <span class="search-close">&times;</span>
-                    </div><!-- Site search end -->
                 </div>
-                <!--/ Container end -->
-
             </div>
-            <!--/ Navigation end -->
         </header>
-        <!--/ Header end -->
-
         <div class="container" style="min-height: 100vh;">
             <main role="main" class="pb-3">
                 @RenderBody()
             </main>
         </div>
-
         <footer id="footer" class="footer bg-overlay">
-
-
             <div class="copyright">
-                <div class="container">
-                    <div class="row align-items-center">
-                        <div class="col-md-6">
-                            <div class="copyright-info">
-                                <span>
-                                    Copyright &copy; <script>
-                                                         document.write(new Date().getFullYear())
-                                    </script>, Designed &amp; Developed by <a href="https://themefisher.com">Themefisher</a>
-                                </span>
-                            </div>
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-md-6">
+                        <div class="footer-menu text-center text-md-right">
+                            <ul class="list-unstyled">
+                                <li><a href="about.html">About</a></li>
+                                <li><a href="team.html">Our people</a></li>
+                                <li><a href="faq.html">Faq</a></li>
+                                <li><a href="news-left-sidebar.html">Blog</a></li>
+                                <li><a href="pricing.html">Pricing</a></li>
+                            </ul>
                         </div>
-
-                        <div class="col-md-6">
-                            <div class="footer-menu text-center text-md-right">
-                                <ul class="list-unstyled">
-                                    <li><a href="about.html">About</a></li>
-                                    <li><a href="team.html">Our people</a></li>
-                                    <li><a href="faq.html">Faq</a></li>
-                                    <li><a href="news-left-sidebar.html">Blog</a></li>
-                                    <li><a href="pricing.html">Pricing</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div><!-- Row end -->
-
-                    <div id="back-to-top" data-spy="affix" data-offset-top="10" class="back-to-top position-fixed">
-                        <button class="btn btn-primary" title="Back to Top">
-                            <i class="fa fa-angle-double-up"></i>
-                        </button>
                     </div>
-
-                </div><!-- Container end -->
-            </div><!-- Copyright end -->
-        </footer><!-- Footer end -->
-        <!-- Javascript Files
-        ================================================== -->
-        <!-- initialize jQuery Library -->
+                </div>
+                <div id="back-to-top" data-spy="affix" data-offset-top="10" class="back-to-top position-fixed">
+                    <button class="btn btn-primary" title="Back to Top">
+                        <i class="fa fa-angle-double-up"></i>
+                    </button>
+                </div>
+            </div>
+          </div>
+        </footer>
         <script src="/main/theme/plugins/jQuery/jquery.min.js"></script>
-        <!-- Bootstrap jQuery -->
         <script src="/main/theme/plugins/bootstrap/bootstrap.min.js" defer></script>
-        <!-- Slick Carousel -->
         <script src="/main/theme/plugins/slick/slick.min.js"></script>
         <script src="/main/theme/plugins/slick/slick-animation.min.js"></script>
-        <!-- Color box -->
         <script src="/main/theme/plugins/colorbox/jquery.colorbox.js"></script>
-        <!-- shuffle -->
         <script src="/main/theme/plugins/shuffle/shuffle.min.js" defer></script>
-
-
-        <!-- Google Map API Key-->
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcABaamniA6OL5YvYSpB3pFMNrXwXnLwU" defer></script>
-        <!-- Google Map Plugin-->
+        <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY" defer></script>
         <script src="/main/theme/plugins/google-map/map.js" defer></script>
-
-        <!-- Template custom -->
         <script src="/main/theme/js/script.js"></script>
-
-    </div><!-- Body inner end -->
+    </div>
 </body>
-
 </html>
