--- a/UserInterface/Views/Word/Index.cshtml
+++ b/UserInterface/Views/Word/Index.cshtml
@@ -1,5 +1,8 @@
-﻿@using Core.Entity
-@model List<Word>
+﻿@using X.PagedList
+@using X.PagedList.Mvc.Core
+@using X.PagedList.Web.Common
+@using Core.Entity
+@model PagedList<Word>
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/Main_Layout.cshtml";
@@ -7,10 +10,10 @@
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 <script src="\lib\jquery\dist\jquery.js"></script>
 
-<h1>Your Dictionary</h1>
-
-<table class="table table-bordered">
-    <thead>
+<h1 class="text-center animated-heading" style="margin-top:50px; font-style:italic;">Your Dictionary</h1>
+<br />
+<table class="table table-bordered table-striped table-warning">
+    <thead class="bg-secondary">
         <tr>
             <th>#</th>
             <th>English</th>
@@ -40,6 +43,19 @@
         }
     </tbody>
 </table>
+@{
+    var renderOptions = new PagedListRenderOptions
+            {
+                DisplayLinkToFirstPage = PagedListDisplayMode.Always,
+                DisplayLinkToLastPage = PagedListDisplayMode.Always,
+                DisplayLinkToPreviousPage = PagedListDisplayMode.Always,
+                DisplayLinkToNextPage = PagedListDisplayMode.Always,
+                DisplayLinkToIndividualPages = true
+            };
+}
+<div class="pagedList">
+    @Html.PagedListPager((IPagedList)Model,page=> Url.Action("Index",new {page}),renderOptions)
+</div>
 
 <script>
     function showConfirmation(event, id) {
