--- a/UserInterface/Views/Unknows/UpdateUnknows.cshtml
+++ b/UserInterface/Views/Unknows/UpdateUnknows.cshtml
@@ -11,6 +11,37 @@
         background-repeat: no-repeat;
         background-size: cover;
     }
+
+    .container {
+        margin-top: 50px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .form-group {
+        margin-bottom: 20px;
+    }
+
+        .form-group label {
+            font-weight: bold;
+        }
+
+        .form-group input {
+            width: 300px;
+            padding: 10px;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+        }
+
+    .btn-save {
+        background-color: orange;
+        color: white;
+        padding: 10px 20px;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+    }
 </style>
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 <script src="\lib\jquery\dist\jquery.js"></script>
@@ -19,23 +50,21 @@
 
 @using (Html.BeginForm("UpdateUnknows", "Unknows", FormMethod.Post))
 {
-    <div class="row" style="margin-top:300px;">
-        <div class="column text-center">
+    <div class="container">
+        <div class="form-group">
             <label style="color:blue; font-weight:bold;">English :</label>
             @Html.TextBoxFor(x=>x.EnglishWord,new {@class="custom-input"})
         </div>
-        <div class="column text-center" style="margin-left: 100px; margin-right: 100px;">
+        <div class="form-group" style="margin-left: 100px; margin-right: 100px;">
             <label style="color:red; font-weight:bold;">Turkish :</label>
             @Html.TextBoxFor(x=>x.TurkishWord,new {@class= "custom-input"})
         </div>
-        <div class="column text-center" style="margin-left: 100px; margin-right: 100px; display: none;">
+        <div class="form-group" style="margin-left: 100px; margin-right: 100px; display: none;">
             <label style="color:red; font-weight:bold;">Word Id :</label>
             @Html.TextBoxFor(x=>x.WordId,new {@class= "custom-input"})
         </div>
 
-        <div class="column text-center">
-            <button class="btn btn-outline-info" id="btn3" style="background-color:orange; color:white;">Save</button>
-        </div>
+        <button class="btn-save" id="btn1" style="background-color:orange; color:white;">Save</button>
     </div>
 }
 @* <script>
