--- a/UserInterface/Views/Shared/Main_Layout.cshtml
+++ b/UserInterface/Views/Shared/Main_Layout.cshtml
@@ -79,7 +79,7 @@
                                         <li class="nav-item"><a class="nav-link" href="/Favorite/Index">Favorites</a></li>
                                         <li class="nav-item"><a class="nav-link" href="/Unknows/Index">Unknows</a></li>
                                         <li>
-                                            <a class="btn btn-primary btn-sm" href="#" style="font-size:14px;">
+                                            <a class="btn btn-primary btn-sm" href="/Practice/Index" style="font-size:14px;">
                                                 <i class="fas fa-play"></i> Let's Practice
                                             </a>
                                         </li>
