--- a/UserInterface/wwwroot/Content/Arkaplan.css
+++ b/UserInterface/wwwroot/Content/Arkaplan.css
@@ -1,6 +1,30 @@
-﻿body {
-    background-color: #f2f2f2;
-    background-image: url('image\\indir.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
+﻿.container {
+    margin-top: 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.form-group {
+    margin-bottom: 20px;
+}
+
+    .form-group label {
+        font-weight: bold;
+    }
+
+    .form-group input {
+        width: 300px;
+        padding: 10px;
+        border-radius: 5px;
+        border: 1px solid #ccc;
+    }
+
+.btn-save {
+    background-color: orange;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
 }
