--- a/UserInterface/Views/Shared/Main_Layout.cshtml
+++ b/UserInterface/Views/Shared/Main_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿
+@{
     Layout = null;
 }
 
@@ -89,7 +90,7 @@
 
                                             </div>
                                         </li>
-                                        <li class="nav-item dropdown">
+                                        @* <li class="nav-item dropdown">
                                             <a class="nav-link dropdown-toggle" href="#" id="practiceDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                                 <i class="fas fa-book"></i> Oxford Word List
                                             </a>
@@ -101,7 +102,7 @@
                                                 <a class="dropdown-item" href="#">C1 Words</a>
                                                 <a class="dropdown-item" href="#">C2 Words</a>
                                             </div>
-                                        </li>
+                                        </li> *@
                                         <li class="nav-item">
                                             <a class="nav-link" href="/Unknows/Index">
                                                 <i class="fas fa-user"></i> Sign Up
@@ -116,10 +117,12 @@
             </div>
         </header>
         <div class="container" style="min-height: 100vh;">
-            <main role="main" class="pb-3">
+            <main role="main" class="pb-3">              
                 @RenderBody()
             </main>
         </div>
+        
+        
         <footer id="footer" class="footer bg-overlay">
             <div class="copyright">
             <div class="container">
@@ -153,6 +156,7 @@
         <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY" defer></script>
         <script src="/main/theme/plugins/google-map/map.js" defer></script>
         <script src="/main/theme/js/script.js"></script>
+        @await RenderSectionAsync("Scripts", required: false)
     </div>
 </body>
 </html>
