kullanıcılara rol atama işlemi yapıldı.

--- a/UserInterface/Views/_ViewImports.cshtml
+++ b/UserInterface/Views/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @using UserInterface.Models
 @using Core.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, UserInterface
