--- a/UserInterface/Areas/Admin/Views/Admin/UserList.cshtml
+++ b/UserInterface/Areas/Admin/Views/Admin/UserList.cshtml
@@ -13,6 +13,8 @@
             <th>Id</th>
             <th>Kullanıcı Adı</th>
             <th>Email</th>
+            <th></th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -21,7 +23,9 @@
             <tr>
                 <td>@item.Id</td>
                 <td>@item.UserName</td>
-                <td>@item.Email</td>             
+                <td>@item.Email</td>    
+                <td><user-role-name user-id="@item.Id"></user-role-name></td>
+                <td> <a asp-controller="Role" asp-area="Admin" asp-action="AssignToRole" asp-route-id="@item.Id" class=" btn btn-outline-warning">Rol İşlemleri</a></td>
             </tr>
         }
     </tbody>
