--- a/UserInterface/Areas/Admin/Views/_ViewImports.cshtml
+++ b/UserInterface/Areas/Admin/Views/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @using Core.ViewModels
 @using UserInterface.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, UserInterface
